프로필 페이지 내의 버튼 활성화 표시

--- a/templates/content/profile.html
+++ b/templates/content/profile.html
@@ -266,7 +266,7 @@
 <!-- 자바 스크립트 영역 이벤트처리나 서버로 데이터를 전달하는 과정(ajax) -->
 <script>
     // 내가 쓴 게시물 이벤트 처리
-    // + 정유진: 버튼 클릭 시 활성화된 버튼 표시
+    // + 정유진: 버튼 활성화 표시
     $("#button_feed_list").click(function () {
         $('#button_feed_list').css({
             borderBottomStyle : "solid"
