프로필 페이지 내의 버튼 활성화 표시 +주석추가

--- a/templates/content/profile.html
+++ b/templates/content/profile.html
@@ -144,16 +144,19 @@
 <div style="border-top: solid 2px rgba(50,50,50,0.1); width: 100%">
     <div style="display: flex; flex-direction: row; justify-content: center; align-items: center; margin: 20px">
         <!-- 내가 작성한 게시글들을 보기 위한 버튼 -->
+        <!-- 정유진: 초기 화면에 활성화된 버튼에 밑줄표시 -->
         <div id="button_feed_list"
              style="cursor: pointer;margin: 0 30px;display: flex; flex-direction: row;align-items: center; border-bottom-style: solid; border-bottom-width: 1px;" ><span
                 class="material-icons-outlined">grid_on</span>내 게시물
         </div>
         <!-- 내가 좋아요한 게시글들을 보기 위한 버튼 -->
+        <!-- 정유진: 초기 화면에 비활성화된 버튼에 밑줄의 두께 설정 -->
         <div id="button_feed_like_list"
              style="cursor: pointer;margin: 0 30px;display: flex; flex-direction: row;align-items: center; border-bottom-width: 1px;"><span
                 class="material-icons-outlined">favorite_border</span>좋아요
         </div>
         <!-- 내가 북마크한 게시글들을 보기 위한 버튼 -->
+        <!-- 정유진: 초기 화면에 비활성화된 버튼에 밑줄의 두께 설정 -->
         <div id="button_feed_bookmark_list"
              style="cursor: pointer;margin: 0 30px;display: flex; flex-direction: row;align-items: center ; border-bottom-width: 1px;"><span
                 class="material-icons-outlined">bookmark_border</span>북마크
@@ -266,7 +269,7 @@
 <!-- 자바 스크립트 영역 이벤트처리나 서버로 데이터를 전달하는 과정(ajax) -->
 <script>
     // 내가 쓴 게시물 이벤트 처리
-    // + 정유진: 버튼 활성화 표시
+    // + 정유진: 프로필 페이지 내의 버튼 활성화 표시
     $("#button_feed_list").click(function () {
         $('#button_feed_list').css({
             borderBottomStyle : "solid"
@@ -290,7 +293,7 @@
     });
 
     // 내가 좋아요한 게시물 이벤트 처리
-    // + 정유진: 버튼 클릭 시 활성화된 버튼 표시
+    // + 정유진: 프로필 페이지 내의 버튼 활성화 표시
     $("#button_feed_like_list").click(function () {
         $('#button_feed_list').css({
             borderBottomStyle : "none"
@@ -314,7 +317,7 @@
     });
 
     // 내가 북마크한 게시물 이벤트 처리
-    // + 정유진: 버튼 클릭 시 활성화된 버튼 표시
+    // + 정유진: 프로필 페이지 내의 버튼 활성화 표시
     $("#button_feed_bookmark_list").click(function () {
         $('#button_feed_list').css({
             borderBottomStyle : "none"
