commit for pull

--- a/templates/astronaut/main.html
+++ b/templates/astronaut/main.html
@@ -386,6 +386,7 @@
 
 
                 <div>
+                    <!-- 상대방이 나를 팔로우 했을땐 맞 이라는 글자가 보이게함 -->
                     <a class="follow_button" id="{{ Recommend_Followers_list.email }}_follwing_btn" href="#"
                        following_id="{{ Recommend_Followers_list.email }}"
                        user_email="{{ user_session.email }}">{% if Recommend_Followers_list.now_following == 1 %}
